Logging, refactoring, safe transactions rolling back and closing